--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ canvas {
   --dark-bg: rgba(15, 15, 15, 0.95);
   --spacing: 350px;
 
-  font-family: brandon-grotesque, sans-serif;
+  font-family: brandon-grotesque, serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -31,7 +31,7 @@ main {
 }
 
 h1, h2, h3, blockquote {
-  font-family: elevon, sans-serif;
+  font-family: elevon, serif;
   font-weight: 700;
   font-style: normal;
 }
