--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url("https://use.typekit.net/jmk3xov.css");
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 canvas {
   position: fixed;
   top: 0;
@@ -11,7 +16,7 @@ canvas {
   --dark-bg: rgba(15, 15, 15, 0.95);
   --spacing: 350px;
 
-  font-family: brandon-grotesque, serif;
+  font-family: brandon-grotesque, sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -25,12 +30,13 @@ main {
   width: 100%;
   margin: 0px auto;
   padding: 120px 0px;
+  
   display: grid;
   grid-template-columns: repeat(12, 1fr);
 }
 
 h1, h2, h3, blockquote {
-  font-family: elevon, serif;
+  font-family: elevon, sans-serif;
   font-weight: 700;
   font-style: normal;
 }
@@ -41,13 +47,11 @@ canvas {
   left: 0;
 }
 
-
-
   header {
     background: var(--dark-bg);
     grid-column: 2 / span 5;
-    font-size: 4 rem;
-    padding: 3 rem;
+    font-size: 2rem;
+    padding: 2rem;
     margin-bottom: var(--spacing);
   }
 
@@ -55,7 +59,7 @@ canvas {
     grid-column: 2 / 8;
     padding: 1rem;
     background: var(--dark-bg);
-    font-size: 1.25rem;
+    font-size: 1.6rem;
     line-height: 1.5;
     margin-bottom: var(--spacing);
   }
@@ -68,8 +72,8 @@ canvas {
   }
 
   blockquote p {
-    color: black;
-    background-color: white;
+    color: rgb(247, 236, 236);
+    /* background-color: rgb(20, 17, 17); */
     font-size: 4rem;
     display: inline;
     line-height: 1;
